--- a/fdf/WIP FDF/Makefile
+++ b/fdf/WIP FDF/Makefile
@@ -6,27 +6,32 @@
 #    By: fabbenbr <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/16 16:14:57 by fabbenbr          #+#    #+#              #
-#    Updated: 2018/11/16 16:15:16 by fabbenbr         ###   ########.fr        #
+#    Updated: 2018/11/17 13:29:47 by fabbenbr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fdf
 
-SRC = main.c
+SRC_PATH = srcs/
 
-OBJ = main.o
+SRC = main.c \
+				$(SRC_PATH)key_mouse_hook.c
 
-INCLUDES = /usr/local/include
+OBJ = main.o \
+				$(SRC_PATH)/key_mouse_hook.o
 
-LIB = /usr/local/lib
+INCLUDES = /includes
 
-//FLAGS = -Wall -Wextra -Werror
+FRAMEW = -framework OpenGL -framework AppKit
+
+LIB = minilibx_macos/libmlx.a libft/libft.a
+
+FLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
 
 $(NAME):
-	gcc -o $(NAME) $(SRC) -I $(INCLUDES) -L $(LIB) minilibx_macos/libmlx.a -framework OpenGL -framework AppKit
-	
+	gcc -o $(NAME) $(SRC) -I $(INCLUDES)  $(LIB) $(FRAMEW)
 
 clean:
 	rm -f $(OBJ)
