--- a/fdf/WIP FDF/Makefile
+++ b/fdf/WIP FDF/Makefile
@@ -18,11 +18,13 @@ SRC = 			$(SRC_PATH)main.c \
 				$(SRC_PATH)windows.c \
 				$(SRC_PATH)key_mouse_hook.c \
 				$(SRC_PATH)file_reader.c \
+				$(SRC_PATH)free.c
 
 OBJ = 			main.o \
 				windows.o \
 				key_mouse_hook.o \
-				file_reader.o
+				file_reader.o \
+				free.o
 
 INCLUDES = includes/
 
