--- a/libft/Makefile
+++ b/libft/Makefile
@@ -77,6 +77,7 @@ SRC = $(SRC_PATH)ft_atoi.c \
 		$(SRC_PATH)ft_strdel_neg.c \
 		$(SRC_PATH)ft_chararrclr.c \
 		$(SRC_PATH)ft_intarrclr.c \
+		$(SRC_PATH)ft_lstreverse.c \
 
 OBJ = ft_atoi.o \
 	  ft_bzero.o \
@@ -139,6 +140,7 @@ OBJ = ft_atoi.o \
 		ft_strdel_neg.o \
 		ft_chararrclr.o \
 		ft_intarrclr.o \
+		ft_lstreverse.o \
 
 FLAGS = -Wall -Wextra -Werror
 
