optimized reader, removed older reader

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -78,6 +78,8 @@ SRC = $(SRC_PATH)ft_atoi.c \
 		$(SRC_PATH)ft_chararrclr.c \
 		$(SRC_PATH)ft_intarrclr.c \
 		$(SRC_PATH)get_next_line.c \
+		$(SRC_PATH)ft_strcatn.c \
+		$(SRC_PATH)ft_strjoinn.c \
 
 OBJ = ft_atoi.o \
 	  ft_bzero.o \
@@ -141,6 +143,8 @@ OBJ = ft_atoi.o \
 		ft_chararrclr.o \
 		ft_intarrclr.o \
 		get_next_line.o \
+		ft_strcatn.o \
+		ft_strjoinn.o \
 
 FLAGS = -Wall -Wextra -Werror
 
