added visual aid in main.c

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -80,6 +80,7 @@ SRC = $(SRC_PATH)ft_atoi.c \
 		$(SRC_PATH)get_next_line.c \
 		$(SRC_PATH)ft_strcatn.c \
 		$(SRC_PATH)ft_strjoinn.c \
+		$(SRC_PATH)ft_intarrprint.c \
 
 OBJ = ft_atoi.o \
 	  ft_bzero.o \
@@ -145,6 +146,7 @@ OBJ = ft_atoi.o \
 		get_next_line.o \
 		ft_strcatn.o \
 		ft_strjoinn.o \
+		ft_intarrprint.o \
 
 FLAGS = -Wall -Wextra -Werror
 
