--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -83,6 +83,7 @@ SRC = $(SRC_PATH)ft_atoi.c \
 		$(SRC_PATH)ft_intarrprint.c \
 		$(SRC_PATH)ft_memdell.c \
 		$(SRC_PATH)ft_strdell.c \
+		$(SRC_PATH)ft_hexaconverter.c \
 
 OBJ = ft_atoi.o \
 	  ft_bzero.o \
@@ -151,6 +152,7 @@ OBJ = ft_atoi.o \
 		ft_intarrprint.o \
 		ft_memdell.o \
 		ft_strdell.o \
+		ft_hexaconverter.o \
 
 FLAGS = -Wall -Wextra -Werror
 
