minor changes to makefiles, pixel.c, visual.h

--- a/lib/visualib/Makefile
+++ b/lib/visualib/Makefile
@@ -28,12 +28,12 @@ IMAGE =		image.o \
 RGB_PATH = rgb/
 RGB =
 
-KEY_PATH = key/
-KEY =		key.o
+#KEY_PATH = key/
+#KEY =		key.o
 
 OBJ =	$(addprefix $(IMAGE_PATH), $(IMAGE)) \
 		$(addprefix $(RGB_PATH), $(RGB)) \
-		$(addprefix $(KEY_PATH), $(KEY))
+		#$(addprefix $(KEY_PATH), $(KEY))
 
 
 
