changes to vemaker for the new list

--- a/lib/geolib/Makefile
+++ b/lib/geolib/Makefile
@@ -37,7 +37,7 @@ VECTOR =	basicvalues.o \
 			norm.o \
 			product.o \
 			sum.o \
-			manip.o
+			#manip.o
 
 OBJ =	$(addprefix $(MATRIX_PATH), $(MATRIX)) \
 		$(addprefix $(PLAN_PATH), $(PLAN)) \
